--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -109,7 +109,7 @@
     & .nest-menu .el-submenu > .el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
-      background-color: $subMenuBg;
+      background-color: $subMenuBg !important;
 
       &:hover {
         background-color: $subMenuHover !important;
