--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,26 +1,28 @@
 // base color
-$blue: #409eff;
+$blue: #409EFF;
 
-$light-blue: #3a71a8;
-$red: #c03639;
-$pink: #e65d6e;
-$green: #30b08f;
-$orange: #fa7c4d;
-$tiffany: #4ab7bd;
-$yellow: #fec171;
-$panGreen: #30b08f;
+$light-blue:#3A71A8;
+$red:#C03639;
+$pink: #E65D6E;
+$green: #30B08F;
+$orange:#fa7c4d;
+$tiffany: #4AB7BD;
+$yellow:#FEC171;
+$panGreen: #30B08F;
 $green1: #44b549;
 
 // sidebar
-$menuText: #ffffff;
-$menuActiveText: #409eff;
-$subMenuActiveText: #f4f4f5; // https://github.com/ElemeFE/element/issues/12951
+$menuText:#ffffff;
+$menuActiveText:#409EFF;
+$subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
 $menuBg: transparent;
-$menuHover: #ffffff;
+$menuHover:#ffffff;
 
-$subMenuBg: #1f2d3d;
-$subMenuHover: #001528;
+
+
+$subMenuBg:#1f2d3d;
+$subMenuHover:#001528;
 
 $sideBarWidth: 210px;
 
